src/test/resources/while.cpp
// int funcInt() {
//     return 3;
// }

// char funcChar() {
//     return 'c';
// }

int main()
{
    // ok
    //while (true) {
    //while (false) {
    //while (!true) {
    //while (!false) {
    //while (1) {
    //while (funcInt()) {
    //while (1 > 0) {
    //while ('c' > 'c') {
    //while (1 > funcInt()) {
    //while ('c' > funcChar()) {
    //while (funcInt() == funcInt()) {
    //while (funcInt() != funcInt()) {
    while (n != 1) {

    // error
    //while ('c') {
    //while (funcChar()) {
    //while (1 > 'c') {
    //while ('c' > 1) {
    //while (1 > 1) {
    //while (1 > funcChar()) {
    //while (1 < funcChar()) {
    //while ('c' > funcInt()) {
    //while ('c' < funcInt()) {
    //while (funcInt() == funcChar()) {
    //while (funcInt() != funcChar()) {
        funcChar();
    }
}